--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "description": "This is an example of a Crawlee project.",
   "dependencies": {
     "crawlee": "^3.0.0",
-    "playwright": "*"
+    "playwright": "^1.51.1"
   },
   "devDependencies": {
     "@apify/tsconfig": "^0.1.0",
-    "tsx": "^4.4.0",
-    "typescript": "~5.4.0",
     "@types/node": "^20.0.0",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "prettier-plugin-packagejson": "^2.5.0"
+    "prettier-plugin-packagejson": "^2.5.0",
+    "tsx": "^4.4.0",
+    "typescript": "~5.4.0"
   },
   "scripts": {
     "start": "bun start:dev",
